# ditwo

./: CMakeLists.txt  GeneralTypes.h  README.md
Src/: GeneralTypes.h
Src/Allocators/: Allocator.cpp  Allocator.h
Src/Structures/: BoolVector.cpp  BoolVector.h  Vector.cpp  Vector.h  VectorInterface.h
Test/: Main.cpp
Test/Structures/: Vector.cpp  VectorTest.cpp
cmake-modules/: AddGTest.cmake
